--- a/gradle.properties
+++ b/gradle.properties
@@ -6,5 +6,14 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=false
 
-# Allow Gradle to use up to 1 GB of RAM
-org.gradle.jvmargs=-Xmx1024M
+# Allow Gradle to use up to ~~1~~ 2 GB of RAM
+org.gradle.jvmargs=-Xmx2048M
+org.gradle.unsafe.configuration-cache=true
+
+# New custom commands to maybe improve performance (Ik some of these are enabled by default but meh whatever):
+org.gradle.caching=true
+org.gradle.configureondemand=true
+org.gradle.parallel=true
+org.gradle.daemon=true
+
+kotlin.incremental=true
