--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ android.enableJetifier=false
 
 # Allow Gradle to use up to ~~1~~ 2 GB of RAM
 org.gradle.jvmargs=-Xmx2048M
-org.gradle.unsafe.configuration-cache=true
+#org.gradle.unsafe.configuration-cache=true
 
 # New custom commands to maybe improve performance (Ik some of these are enabled by default but meh whatever):
 org.gradle.caching=true
