--- a/blacksmith-docs/static/manifest.json
+++ b/blacksmith-docs/static/manifest.json
@@ -1,10 +1,11 @@
 {
+  "name": "Blacksmith v0.4.1",
   "short_name": "Blacksmith",
   "theme_color": "#c1eab6",
   "background_color": "#424242",
   "display": "standalone",
-  "scope": "/",
-  "start_url": "/",
+  "scope": "./",
+  "start_url": "./index.html",
   "icons": [
     {
       "src": "img/logo/blacksmith-logo.svg",
@@ -14,8 +15,9 @@
     {
       "src": "img/logo/blacksmith-logo-square.png",
       "sizes": "554x554",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
-  "description": "An intuitive framework for FTC software development"
+  "description": "An intuitive framework for rapid FTC software development"
 }
