--- a/Blacksmith/build.gradle
+++ b/Blacksmith/build.gradle
@@ -46,20 +46,17 @@ dependencies {
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
-//    implementation 'io.github.classgraph:classgraph:4.8.154'
-//    implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.20"
-
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation "io.mockk:mockk:1.13.3"
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.8'
 }
 
 tasks.withType(Test) {
     useJUnitPlatform()
 }
-
-apply from: '../build.dependencies.gradle'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
