--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -11,12 +11,23 @@
 // Custom definitions may go here
 
 // Include common definitions from above.
+plugins {
+    id 'com.google.devtools.ksp' version '1.7.20-1.0.8'
+}
+
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
 apply plugin: 'kotlin-android'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
+
+    sourceSets.debug {
+        kotlin.srcDirs += 'build/generated/ksp/debug/kotlin'
+    }
+    sourceSets.release {
+        kotlin.srcDirs += 'build/generated/ksp/release/kotlin'
+    }
 }
 
 repositories {
@@ -29,6 +40,9 @@ dependencies {
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
     implementation project(':Blacksmith')
+
+    implementation project(":ASymbolProcessor")
+    ksp project(":ASymbolProcessor")
 
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.acmerobotics.roadrunner:core:0.5.6'
