--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,6 @@ org.gradle.parallel=true
 org.gradle.daemon=true
 
 kotlin.incremental=true
+
+ksp.incremental=true
+ksp.incremental.intermodule=true
