--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -31,8 +31,8 @@ android {
 }
 
 repositories {
-    maven { url 'https://jitpack.io' }
-    maven { url 'https://maven.brott.dev/' }
+    maven { url = 'https://jitpack.io' }
+    maven { url = 'https://maven.brott.dev/' }
 }
 
 dependencies {
@@ -47,7 +47,7 @@ dependencies {
     implementation 'org.apache.commons:commons-math3:3.6.1'
     implementation 'com.acmerobotics.roadrunner:core:0.5.6'
 
-    implementation 'com.github.NoahBres:MeepMeep:2.0.2'
+    implementation 'com.github.NoahBres:MeepMeep:2.0.3'
 
     implementation 'com.github.Eeshwar-Krishnan:PhotonFTC:v2.0.4'
 
